<resources>
    <string name="app_name">Consultório Médico</string>
    <string name="str_br">Brasil</string>
    <string name="str_consultas">Consultas</string>
    <string name="str_medicos">Médicos</string>
    <string name="str_medico">Médico:</string>
    <string name="str_sala">Sala:</string>
    <string name="str_medico_editar">Editar Médico</string>
    <string name="str_paciente_editar">Editar Paciente</string>
    <string name="str_consulta_editar">Editar Consulta</string>
    <string name="str_pacientes">Pacientes</string>
    <string name="str_paciente">Paciente:</string>
    <string name="str_find">Procurar:</string>
    <string name="str_in_use">já está ocupad</string>
    <string name="str_in_time">neste horário!</string>
    <string name="str_export">Deseja exportar</string>
    <string name="str_contacts">para seus contatos</string>
    <string name="str_exp_title">Exportar</string>
    <string name="str_nome">Nome:</string>
    <string name="str_descricao">Descrição:</string>
    <string name="str_telefone">Telefone:</string>
    <string name="str_email">E-mail:</string>
    <string name="str_send_mail">Enviar e-mail...</string>
    <string name="str_mail_none">Nenhum cliente de e-mail instalado!</string>
    <string name="str_endereco">Endereco:</string>
    <string name="str_convenio">Convênio:</string>
    <string name="str_convenios">Convênios</string>
    <string name="str_especialidade">Especialidade:</string>
    <string name="str_especialidades">Especialidades</string>
    <string name="str_crm">CRM:</string>
    <string name="str_cpf">CPF:</string>
    <string name="str_uf">UF:</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancela</string>
    <string name="str_found">já existe</string>
    <string name="str_not_found">não foi encontrado!</string>
    <string name="str_yes">Sim</string>
    <string name="str_no">Não</string>
    <string name="str_delete">Deseja realmente apagar</string>
    <string name="str_fill">Preencha o campo</string>
    <string name="str_correct">Preencha</string>
    <string name="str_correct_start_time">o início da consulta</string>
    <string name="str_correct_end_time">o término da consulta</string>
    <string name="str_correct_medico">o campo médico</string>
    <string name="str_correct_paciente">o campo paciente</string>
    <string name="str_correct_sala">o campo sala</string>
    <string name="str_full">Preencha todos os campos!</string>
    <string name="str_empty">Campo vazio!</string>
    <string name="str_success">Operação efetuada com êxito!</string>
    <string name="str_fail">Operação falhou!</string>
    <string name="str_err_insert">Erro inserindo</string>
    <string name="str_err_update">Erro alterando</string>
    <string name="str_err_delete">Erro excluindo</string>
    <string name="str_err_find">Erro buscando</string>
    <string name="str_err_sql_query">Erro na consulta SQL</string>
    <string name="str_err_sql_open">Erro abrindo banco de dados</string>
    <string name="str_read">para leitura!</string>
    <string name="str_write">para escrita!</string>
    <string name="str_key_medico">chave (CRM + UF)</string>
    <string name="str_key_paciente">chave CPF</string>
    <string name="str_key_telefone">número de telefone</string>
    <string name="str_key_email">endereço de email</string>
    <string name="str_key_endereco">endereço</string>
    <string name="str_med_x_tel">relação Medico X Telefone</string>
    <string name="str_med_x_mai">relação Medico X Email</string>
    <string name="str_med_x_end">relação Médico X Endereço</string>
    <string name="str_med_x_conv">relação Médico X Convênio</string>
    <string name="str_pac_x_tel">relação Paciente X Telefone</string>
    <string name="str_pac_x_mai">relação Paciente X Email</string>
    <string name="str_pac_x_end">relação Paciente X Endereço</string>
    <string name="str_in_db">no banco de dados!</string>
    <string name="str_msg_plus">conforme a mensagem abaixo:</string>
    <string name="str_info_repeat">Informação repetida</string>
    <string name="str_remove">Remover</string>
    <string name="str_none">Nada selecionado!</string>
    <string name="str_all">todos</string>
    <string name="str_select">selecionados</string>
    <string name="str_err_time">Horário inicial maior que o final!</string>
    <string name="str_sr">Sr(a)</string>
    <string name="str_dr">Dr(a)</string>
    <string name="str_no_tel">não possui nenhum telefone cadastrado!</string>
    <string name="str_send_sms">Enviar SMS</string>
    <string name="str_fail_sms">SMS falhou!</string>
    <string name="str_confirm">sua consulta está agendada para</string>
    <string name="str_to">Até</string>
    <string name="str_sms_send">SMS enviado!</string>
    <string name="str_sms_fail">Falha geral enviando SMS!</string>
    <string name="str_sms_no_serv">Sem serviço para enviar SMS!</string>
    <string name="str_sms_no_pdu">PDU nula para o SMS!</string>
    <string name="str_sms_off">SMS com rádio desligado!</string>
    <string name="str_sms_ok">SMS entregue!</string>
    <string name="str_sms_error">SMS não entregue!</string>
    <string name="str_no_tel_feature">Recurso de telefonia indisponível</string>
    <string name="str_contact_create">Criando contatos...</string>
    <string name="str_contact_add">Contato adicionado</string>
    <string name="str_contact_update">Contato atualizado</string>
    <string name="str_contact_add_fail">Criar contato falhou</string>
</resources>
